<resources>
    <string name="app_name">Ejemplo10</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="nombre_moneda">Nombre Moneda</string>
    <string name="pais_moneda">Pais Moneda</string>
    <string name="name">Name</string>
    <string name="country">country</string>
    <string name="year">year</string>
    <string name="available">available</string>
    <string name="submit">Submit</string>
    <string name="ahuevo">Ahuevo</string>
    <string name="moneda">Moneda</string>
    <string name="anio">anio</string>
    <string name="order">Order by</string>
    <string name="alphabetic_decedent">Alphabetic decedent</string>
    <string name="alphabetic_ascendant">Alphabetic Ascendant</string>
    <string name="equivalence">Equivalence</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="fb_error">Unknown error with Database</string>
    <string name="fb_ok">object inserted</string>
    <string name="updated_of">object added</string>
    <string name="Country">Name</string>
    <string name="name_country">Name Country</string>
    <string name="country_s_name">Country\'s name</string>
    <string name="country_name">Country Name</string>
    <string name="area">Area</string>
    <string name="area2">Area</string>
    <string name="country5">Country</string>
    <string name="country_name5">Country Name</string>
    <string name="area5">area</string>
    <string name="area51">area</string>
</resources>
