<?xml version="1.0" encoding="utf-8"?>
<!-- TODO (3.3) Los menú se defienen con la etiqueta menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:checkableBehavior="single"
            android:id="@+id/filter">

        <item
                android:id="@+id/filter_AZ"
                android:icon="@drawable/ic_sort_by_alpha_black_24dp"
                android:orderInCategory="0"
                android:title="@string/alphabetic_decedent"/>
        <item
                android:id="@+id/filter_ZA"
                android:icon="@drawable/ic_sort_by_alpha_black_24dp"
                android:orderInCategory="0"
                android:title="@string/alphabetic_ascendant"/>
    </group>

    <group>
        <item
                android:id="@+id/nav_share"
                android:orderInCategory="1"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
        <item
                android:id="@+id/nav_send"
                android:orderInCategory="1"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send"/>
    </group>
</menu>
